# mcp-client-multiserver

./: .gitignore  README.md  main.py  pyproject.toml
src/mcp_client/: client.py
