[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.4",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.9.2",
]

[tool.setuptools]
package-dir = {"" = "src"}